--- a/EventManagement.Services/EventManagement.Services.csproj
+++ b/EventManagement.Services/EventManagement.Services.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EventManagement.Core\EventManagement.Core.csproj" />
     <ProjectReference Include="..\EventManagement.InfraStructure\EventManagement.InfraStructure.csproj" />
   </ItemGroup>
